--- a/1 Fancy Buttons/index.html
+++ b/1 Fancy Buttons/index.html
@@ -1,1 +1,25 @@
 
+<section>
+  <h4>Facebook Style</h4>
+  <button type="button" name="button" class="final__facebook-style-btn final__facebook-style-dark">Button Dark</button>
+
+  <button type="button" name="button" class="final__facebook-style-btn final__facebook-style-light">Button Light</button>
+
+</section>
+
+<section>
+
+  <h4>3D Buttons</h4>
+  <button type="button" name="button" class="final__btn-3d-1">3D Button 1</button>
+
+  <button type="button" name="button" class="final__btn-3d-2">Circle!</button>
+
+</section>
+
+<section>
+
+  <h4>Gradient Bordered Buttons</h4>
+  <button type="button" name="button" class="final__gradient-button-1">Gradient button 1</button>
+  <button type="button" name="button" class="final__gradient-button-2">Gradient button 2</button>
+
+</section>
