--- a/2 Sexy Typography/index.html
+++ b/2 Sexy Typography/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed" rel="stylesheet">
 
   <h2>Final Result
     <small>Use this for reference!</small>
