--- a/5 useful broken images/index.html
+++ b/5 useful broken images/index.html
@@ -1,1 +1,45 @@
 
+ <h1>
+    <small>Day #5</small> Useful Broken Images</h1>
+
+  <div class="sandbox">
+    <h2>Sandbox
+      <small>This is where you play</small>
+    </h2>
+    <div class="content">
+
+      <p>
+        <strong>Instructions:</strong> Whether it's a typo in the
+        <code>img</code> tag source, or the image itself was misplaced or removed on the server - images break all the time on the web. The
+        problem is, the browsers default way to display a broken image is really ugly. You can fix that and actually use
+        it as an opportunity to enhance the user's experience on your web pages with CSS! That's your challenge in this lesson.</p>
+
+      <section>
+
+        <h4>Example</h4>
+
+        <img src="img/brokenimage.jpg" alt="Flying eagle" class="image">
+        <br>
+        <img src="img/brokenimage2.jpg" alt="Paddleboard" class="image">
+
+      </section>
+
+    </div>
+  </div>
+
+  <div class="final-result">
+    <h2>Final Result
+      <small>Use this for reference!</small>
+    </h2>
+    <div class="content">
+
+      <section>
+
+        <h4>Example</h4>
+
+        <img src="img/brokenimage.jpg" alt="Flying eagle" class="final__image">
+
+      </section>
+
+    </div>
+  </div>
